--- a/index.html
+++ b/index.html
@@ -4,20 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rock Paper Scissor</title>
+    <title>Rock, Paper, Scissor</title>
     <link rel="stylesheet" href="style.css">
     <script src="game.js" defer></script>
 </head>
 <body>
-    <h1>Rock Paper Scissor Game</h1>
-    <p>Please make your choice</p>
-    <div id="buttons">
-        <button id="rock">Rock</button>
-        <button id="paper">Paper</button>
-        <button id="scissor">Scissor</button>
-    </div>
-    <div id="counter"></div>
-    <div id="result"></div>
-
+    <header>
+        <p class="header_logo">Rock, Paper, Scissor</p>
+    </header>
+    <main>
+        <p class="instruction">Please make your choice</p>
+        <game>
+            <div id="counter">
+                <div class="scorecard">
+                    <number id="numbercomputer">0</number>
+                    <p>Points of Computer</p>
+                </div>
+                <div class="scorecard">
+                <number id="numberplayer">0</number>
+                <p>Points of Player</p>
+                </div>
+            </div>
+            <div id="buttons">
+                <button id="rock">Rock</button>
+                <button id="paper">Paper</button>
+                <button id="scissor">Scissor</button>
+            </div>
+            <div id="result"></div>
+            <button id="resbut" style="display: none;"></button>
+        </game>
+    </main>
+    <footer>
+        <div>Copyright © The Odin Proiect 2022</div>
+    </footer>
 </body>
 </html>
